--- a/_app/css/post.sass
+++ b/_app/css/post.sass
@@ -8,9 +8,6 @@
   -moz-transition: -moz-transform 500ms ease-in-out
   -webkit-transition: -webkit-transform 250ms ease-in-out
 
-#posts
-  height: 100%
-
 md-list#posts 
   padding-top: 0
 #under-active-post-wrapper
@@ -35,6 +32,7 @@ md-list#posts
       span
         color: #fff
   .postcontent
+    cursor: pointer
     .body
       width: 100%
       height: 100%
